--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -18,7 +18,11 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.ua.in.localhome.lightcontrol.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
+            android:screenOrientation="portrait" 
+            android:configChanges="keyboardHidden|orientation"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
